ressources/mysql/03-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: projet-pma
  labels:
    app: mysql
    tier: db
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        tier: db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
          livenessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost", "--silent"]
            initialDelaySeconds: 180
            periodSeconds: 15
            failureThreshold: 5
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost", "--silent"]
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mysql-data
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: projet-pma
  labels:
    app: mysql
    tier: db
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
